# c-exercises

./: hangman  myrm  random_word  readonechar  typescript
26-hw6/: supercal
HomeWork5/: CMakeLists.txt  Makefile  README.md  fl.c  fl.h  mail_merge.c  process.c  process_record.c  process_records.c  wordstore13.c  ws13.h
HomeWork5/26-hw5/: CMakeLists.txt  fl.c  fl.h  sample.fmt  wordstore13.c
HomeWork7/: README.md  add-edit_item.cgi  args1.cgi  cities.fmt  cities.html  cities.tab  delete_item.cgi  ewp.html  fl  mwp.cgi  qryparse  qryparse.c  typescript  view_page.cgi  xcal2  xcal2.cgi  xcal3.cgi  year.html
HomeWork7/data/: .tab  cities.tab  tofik.tab
Homework1/: .index.html.swo  .index.html.swp  CMakeLists.txt  README.md  badtime  badtime.c  extract_comments  extract_comments.c  from_boston  hello.cgi  hello6  hello6.c  index.html  info.txt  insert_commas  insert_commas.c  leaving_boston.cgi  myprog.c  public_html  rmtags  rmtags.c  sample_sched.txt  semi2tab  semi2tab2  users.txt  welcome.html
Homework2/: CMakeLists.txt  README.md  blank.txt  part4b.cgi  part4b.top  sample_metadata.txt  sample_version2.txt  sample_version3.txt  sched  table1.html  tt2ht1  tt2ht1.c  tt2ht2  tt2ht2.c  tt2ht3  tt2ht3.c  typescript  who.html  who.txt  whostyle.css
Homework2/public_html/: part3b.cgi  (+2 more)
Homework3/: answers.txt
Homework4/: CMakeLists.txt  Makefile  README.md  deltest.c  scanfdemo.c  showtable.c  wl.h  wlfiler5.c  wlfiler6.c  wlfiler6_old.c  wlmain.c
Homework6/: README.md  myrm  name2num  supercal
toy/: CMakeLists.txt  answers.txt  prob10.c  prob2.c  prob7.c
(+3 files in other folders)
