cmake_minimum_required(VERSION 3.0)
project(Homework1 C)

set(CMAKE_C_STANDARD 99)

add_executable(26-hw1/rmtags 26-hw1/rmtags.c)
add_executable(hello6 hello6.c)
add_executable(extract_comments extract_comments.c)
add_executable(26-hw1/insert_commas 26-hw1/insert_commas.c)
add_executable(badtime badtime.c)
